Supports jackson2 and Jackson3
This reverts commit 1be6c154ce7f12954249ef89ea2745ecdc34ccb3.